deploy/common/app/k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nx-app
  namespace: ${namespace}
  labels:
    app: nx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nx-app
  template:
    metadata:
      labels:
        app: nx-app
    spec:
      containers:
      - name: nx-container
        image: ${k8s_image}
        ports:
        - containerPort: 3000
